--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -218,7 +218,7 @@ html:not(.designer) [name="registerAsVendor"] [name*="buttonText"] {
 html:not(.designer) [name="registerAsVendor"] [name*="buttonText"] h4{
 	font-size:1rem!important;
 	color:white!important;
-	
+	padding: 0.4rem 0 0;
 }
 html:not(.designer) [name="registerAsVendor"] [name*="buttonText"] img{
 margin-left:.5rem;}
