--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -846,7 +846,7 @@ html:not(.designer) .SourceCode-Forms-Controls-Web-Button{
 	background-color:var(--orange)!important;
 	color:white!important;
 	font-size:1rem;
-	padding: 0.6rem 2rem;
+	padding: 0.6rem 2rem 0.8rem;
 }
 html:not(.designer) .timepicker-buttons{
 display:flex;
