--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1176,6 +1176,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting RM A
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Vendor"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Document Signature"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Draft"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"]/* related to etender, do not replace or remove*/,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Approval Awaiting from NOC Engineer"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Approval Awaiting from NOC Lead "],
@@ -1203,6 +1204,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting RM A
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Vendor"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Document Signature"] > span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"] >span,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Draft"] > span, 
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Vendor Managament Team"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending reviewer"] >span,
@@ -1219,7 +1221,8 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Approval Awa
 	width:fit-content!important;
 	font-size: 8pt;
 }
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"] >span{
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"] >span,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Draft"] > span{
 	background-color:#EFEFEF;
 	color:#616161!important;
 }
