Update mainstyles.css by dani
line 1575 to line 1588

--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1572,6 +1572,20 @@ div#ad5fd33b-1af7-81a5-cb8e-33cd06d540d9_14e85709-0a62-5be5-1c4f-d6e115fbf12a_Ta
     flex-direction: column;
     width: 100%;
 }
+/*added by dani*/
+html:not(.designer) [name="SignUpButton"]{padding-bottom: 0.8rem;} /*for the signup button*/
+.theme-entry .input-control.select-box .input-control-buttons a:focus {border:none;} /*for the calendar button*/
+html:not(.designer) [name="registerAsVendor"] [name*="buttonText"] img{margin-bottom: -0.8rem;}
+html:not(.designer) [name="registerAsVendor"] [name*="buttonText"] {padding: .4rem 1.5rem 1.2rem 1.7rem !important;} /*register button in the external hub*/
+.mobile .theme-entry .grid-header-wrapper .grid-header-controls a,.mobile .theme-entry .panel-header-wrapper .panel-header-controls a {
+    width: 3rem !important;
+    height: 3rem !important;
+    margin: 0rem !important;
+}
+html[dir=ltr] .theme-entry .grid-header-wrapper .grid-header-controls,html[dir=ltr] .theme-entry .panel-header-wrapper .grid-header-controls,html[dir=ltr] .theme-entry .grid-header-wrapper .panel-header-controls,html[dir=ltr] .theme-entry .panel-header-wrapper .panel-header-controls {
+    padding-right: 0 !important;
+}
+/*end*/
 @media(min-width:992px){
 	html:not(.designer) .theme-entry span[name*="profilePhoto"]{
 	border:1px solid rgb(220 220 220 / 80%)!important;
