--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1639,6 +1639,9 @@ span#\31 e489858-29a8-1a34-c6bb-f5e8d6ad856f_cc0af9ec-9ee7-735d-f279-70868771fc5
     margin: 0 .5rem;
     width: calc(100% - 1rem);
 }
+[name*="AttachmentListsNonSMEData Label1"] strong{
+	font-size: 1.1rem!important;
+}
 /*end*/
 @media(min-width:992px){
 	html:not(.designer) .theme-entry span[name*="profilePhoto"]{
