--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1479,6 +1479,9 @@ html:not(.designer) body.theme-entry [name*="kpiContainer"] span[name*="kpiIcon"
 	left: 50%!important;
 	transform: translate(-50%,-50%);
 }
+[name*="AttachmentListsNonSMEData"]  span{
+		font-size: 1.6rem!important;
+}
 table td .select-box.dropdown-box.watermark,
 .theme-entry .input-control.select-box{
 		height:3rem;
