--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -17,10 +17,16 @@ div#\33 6df741a-b75c-d960-13a5-00b9bebf95cf_0e23ec66-6058-0555-3ff6-000bfc32780d
 input#\33 6df741a-b75c-d960-13a5-00b9bebf95cf_9552b5c7-e566-a903-5d6c-6c0fdd7c8b23,
 html:not(.designer) .theme-entry .input-control.select-box .input-control-buttons{
     border: none!important;
+	
 }
+div#\33 6df741a-b75c-d960-13a5-00b9bebf95cf_0e23ec66-6058-0555-3ff6-000bfc32780d .styling-font {
+    padding: 0!important;
+}
+html:not(.designer) .theme-entry input#\33 6df741a-b75c-d960-13a5-00b9bebf95cf_9552b5c7-e566-a903-5d6c-6c0fdd7c8b23 {border-left:1px solid var(--borderColor)!important;border-radius:0!important;padding: 0 0 0 1rem!important;}
 div#\33 6df741a-b75c-d960-13a5-00b9bebf95cf_6ebe8c5f-fee3-56be-b5a7-58414bd44535_Table {
     border: 1px solid var(--borderColor);
     border-radius: .5rem;
+    padding: .4rem 1rem!important;
 }
 [name*="Button"]{
 	border: none!important;
