--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -26,7 +26,9 @@ html:not(.designer) .theme-entry input#\33 6df741a-b75c-d960-13a5-00b9bebf95cf_9
 div#\33 6df741a-b75c-d960-13a5-00b9bebf95cf_6ebe8c5f-fee3-56be-b5a7-58414bd44535_Table {
     border: 1px solid var(--borderColor);
     border-radius: .5rem;
-    padding: .4rem 1rem!important;
+    /*padding: .4rem 1rem!important;*/
+	padding-left: 1rem;
+	height: 3rem;
 }
 [name*="Button"]{
 	border: none!important;
