--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -716,13 +716,13 @@ html:not(.designer) .select-box[name*="OBB_calendar"] *,
 .theme-entry .top-calendar a.today-title {
     border: none;
     border-radius: 0;
-    margin-top: 1rem;
+    margin-top: 0.5rem !important;
     padding: 0;
 }
 .theme-entry .top-calendar a {
     margin-top: 1rem!important;
     background-repeat: no-repeat;
-    height: 1rem!important;
+    height: 1.5rem!important;
 }
 .theme-entry .top-calendar a:hover {
     color: var(--aqua) !important;
