--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1752,6 +1752,9 @@ div#\39 21cbae6-5b02-512c-f2ab-377c4ff39f68_39baf32d-d4d2-aa37-766e-6700557c0a66
 div#\34 ff8d86b-5aa1-bb2c-c1ad-3f80fddb4100_52a0baec-b972-48e4-ad3e-321407a43c81_Table {
     padding: 0 1rem;
 }
+div#\39 21cbae6-5b02-512c-f2ab-377c4ff39f68_835b8031-a79e-4133-64b5-e8bef1ecda29 .styling-font {
+    padding: 0;
+}
 @media(min-width:992px){
 	div#\34 ff8d86b-5aa1-bb2c-c1ad-3f80fddb4100_52a0baec-b972-48e4-ad3e-321407a43c81_Table {
     padding: 0;
